--- a/index.html
+++ b/index.html
@@ -47,12 +47,14 @@
 
     <div class="jumbotron">
       <div class="container">
+        <div class="subtitle">
+          Providing occasional or part time help in Human Resources / Office Administration
+        </div>
         <h1>[Insert image here]</h1>
       </div>
     </div>
 
     <div class="container">
-      <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-4">
           <h2>About Us</h2>
@@ -68,13 +70,13 @@
           <h2>Connect</h2>
           <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
           <p>
-            PHONE:<br />
+            Phone:<br />
             <span class="field">
               403-703-9552
             </span>
           </p>
           <p>
-            E-MAIL:<br />
+            E-mail:<br />
             <span class="field">
               <script type="text/javascript">
                 // Obfuscate
@@ -86,6 +88,12 @@
               <noscript>businessperspectives.ca</noscript>
             </span>
           </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-8">
+          <h2>Testimonials</h2>
+          <p class="testimonial">Sample content</p>
         </div>
       </div>
 
@@ -100,7 +108,7 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
+    <script src="js/jquery-1.11.0.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
