Created dreamweaver template and added services page

--- a/services.html
+++ b/services.html
@@ -49,10 +49,21 @@
     <div class="jumbotron">
       <div class="container">
         <!-- InstanceBeginEditable name="content1" -->
-        <div class="subtitle">
-          Providing occasional or part time help in Human Resources / Office Administration
-        </div>
-        <h1>[Insert image here]</h1>
+        <h1>Some Impressive Title</h1>
+        We offer a number of services:
+        <ul>
+          <li>Recruitment</li>
+          <li>Orientations / Training and Development</li>
+          <li>Human Resource Planning</li>
+          <li>Payroll</li>
+          <li>Bookkeeping</li>
+          <li>Administrative Support</li>
+          <li>Applicant tracking system (ATS)</li>
+          <li>Research</li>
+          <li>Event Planning</li>
+          <li>Implementation of new systems or programs</li>
+          <li>Performance Reviews</li>
+        </ul>
         <!-- InstanceEndEditable -->
       </div>
     </div>
@@ -60,16 +71,6 @@
     <div class="container">
       <div class="row">
         <!-- InstanceBeginEditable name="content2" -->
-        <div class="col-md-4">
-          <h2>About Us</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="about.html" role="button">Read more &raquo;</a></p>
-        </div>
-        <div class="col-md-4">
-          <h2>Services</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="services.html" role="button">Read more &raquo;</a></p>
-        </div>
         <!-- InstanceEndEditable -->
         <div class="col-md-4 contact">
           <h2>Connect</h2>
