Added images, fix minor layout issues

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="index.html">
-            <!-- TODO: add logo here -->
-            Business Perspectives
+            <img src="img/logo.png" />
+            Business <span class="altBrand">Perspectives</span>
           </a>
         </div>
         <div class="navbar-collapse collapse navbar-right">
@@ -52,7 +52,6 @@
         <div class="subtitle">
           Providing occasional or part time help in Human Resources / Office Administration
         </div>
-        <h1>[Insert image here]</h1>
         <!-- InstanceEndEditable -->
       </div>
     </div>
