--- a/services.html
+++ b/services.html
@@ -30,8 +30,8 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="index.html">
-            <!-- TODO: add logo here -->
-            Business Perspectives
+            <img src="img/logo.png" />
+            Business <span class="altBrand">Perspectives</span>
           </a>
         </div>
         <div class="navbar-collapse collapse navbar-right">
