--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
   <meta name="author" content="">
   <link rel="shortcut icon" href="favicon.ico">
   <!-- InstanceBeginEditable name="doctitle" -->
-    <title>Business Perspectives</title>
+    <title>Business Perspectives - About</title>
     <!-- InstanceEndEditable -->
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.css" rel="stylesheet">
@@ -51,11 +51,7 @@
     <div class="jumbotron">
       <div class="container">
         <!-- InstanceBeginEditable name="content1" -->
-        <!-- placeholder for image -->
-        <div style="height:300px;"></div>
-        <div class="subtitle">
-          Providing occasional or part time help in Human Resources / Office Administration
-        </div>
+        <h1>About</h1>
         <!-- InstanceEndEditable -->
       </div>
     </div>
@@ -63,24 +59,8 @@
     <div class="container">
       <div class="row">
       	<!-- InstanceBeginEditable name="content2" -->
-        <div class="col-md-4">
-          <h2>Services</h2>
-          <p>Is this your company?</p>
-          <ul>
-          	<li>You have a surge of people that you need to hire and need extra help getting that done.</li>
-            <li>You need to hire one person but you want to be able to concentrate on your business and not spend time screening through applications. </li>
-            <li>You would like someone to come in and teach your staff how to better utilize software like Microsoft Office in order to do their jobs better.</li>
-            <li>You want someone to teach them about company culture, policies, etc or find ways to improve employee retention.</li>
-            <li>You need assistance with various Human Resources tasks but not on a full time basis. </li>
-            <li>You could use some help managing the office or doing some bookkeeping so that you can concentrate on making money in your business. </li>
-          </ul>
-          <p>These are just some of the things I can help with.  </p>
-          <p><a class="btn btn-default" href="services.html" role="button">Read more &raquo;</a></p>
-        </div>
-        <div class="col-md-4">
-          <h2>About Us</h2>
-          <p>Janice Richardson is the sole proprietor of Business Perspectives.  She has a Bachelor of Business Administration specializing in Human Resources from the University of Regina.  She is also in the process of obtaining her CHRP (Canadian Human Resources Profession) designation.   Janice has a broad spectrum of experience combining Human Resources and business.</p>
-          <p><a class="btn btn-default" href="about.html" role="button">Read more &raquo;</a></p>
+        <div class="col-md-8 alt-col">
+          <p>Janice Richardson is the sole proprietor of Business Perspectives and she has a Bachelor of Business Administration specializing in Human Resources from the University of Regina.  She is also in the process of obtaining her CHRP (Canadian Human Resources Profession) designation.   Janice has a broad spectrum of experience combining Human Resources and business.  Her strengths are in recruitment, training, organization & planning but also has experience in bookkeeping, payroll, analytics, administrative work, research and writing.  She has worked in many sectors including manufacturing, engineering, oil and gas, healthcare, non-profit, IT/web design, hospitality, and retail.  Janice is always striving to help her clients improve their business processes resulting in more efficient or improved business practices.  Janice is heavily involved in the community volunteering in non-profit organizations, church, sports teams, and schools.  She has a heart for people with various disadvantages and participated in a home building mission trip in Mexico in March 2014.</p>
         </div>
         <!-- InstanceEndEditable -->
         <div></div>
