Shortened headings to make them fit on one line

--- a/services.html
+++ b/services.html
@@ -79,11 +79,11 @@
       </div>
       <div class="row">
         <div class="col-md-4 alt-col">
-          <h2>Employee Retention Strategies</h2>
+          <h2>Employee Retention</h2>
           <p>There is a talent shortage in various industries.  As more and more baby boomers retire, this will just get worse.  Employees will jump to other jobs if they think things will be better there.  The cost of recruiting and training new people is very expensive.  That is why it is important for companies to have strategies to try and retain their current employees.</p>
         </div>
         <div class="col-md-4">
-          <h2>Business Process Analysis and Office Organization</h2>
+          <h2>Business Processes</h2>
           <p>Sometimes the business processes your company uses worked at the time they were started but as your company grows or changes, there may be a better way to do things.  Some changes can make the work flow more efficient, therefore reducing costs or allowing you to do more.</p>
         </div>
         <div class="col-md-4 alt-col">
@@ -93,11 +93,11 @@
       </div>
       <div class="row">
         <div class="col-md-4">
-          <h2>Administrative work</h2>
+          <h2>Administrative Work</h2>
           <p>This could include a full range of things including event planning, mail merges / customer mail outs, create brochures /  manuals, maintain employee files, data entry, reports, purchasing, travel arrangements, customer service, or any other related tasks.</p>
         </div>
         <div class="col-md-4 alt-col">
-          <h2>Payroll and Benefit Administration</h2>
+          <h2>Payroll and Benefits</h2>
           <p>I can assist managing or implementing a benefit program for you company.  I can also assist doing payroll on a periodic or regular basis.  </p>
         </div>
         <div class="col-md-4">
