Changed punctuation of contact message

--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
       	
         <div class="col-md-4 contact">
           <h2>Connect</h2>
-          <p>Business Perspectives is a Calgary based business. For more information or to book services, please contact Janice Richardson:</p>
+          <p>Business Perspectives is a Calgary based business. For more information or to book services, please contact Janice Richardson.</p>
           <p>
             Phone:<br />
             <span class="field">
