Added sample banner image, fixed some layout glitches

--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@
     <div class="jumbotron">
       <div class="container">
         <!-- InstanceBeginEditable name="content1" -->
-        <!-- placeholder for image -->
-        <div style="height:300px;"></div>
-        <div class="subtitle">
+        <img src="img/banner.jpg" class="banner" />
+        <div class="subtitle" style="display:none;">
           Providing occasional or part time help in Human Resources / Office Administration
         </div>
         <!-- InstanceEndEditable -->
@@ -65,16 +64,7 @@
       	<!-- InstanceBeginEditable name="content2" -->
         <div class="col-md-4">
           <h2>Services</h2>
-          <p>Is this your company?</p>
-          <ul>
-          	<li>You have a surge of people that you need to hire and need extra help getting that done.</li>
-            <li>You need to hire one person but you want to be able to concentrate on your business and not spend time screening through applications. </li>
-            <li>You would like someone to come in and teach your staff how to better utilize software like Microsoft Office in order to do their jobs better.</li>
-            <li>You want someone to teach them about company culture, policies, etc or find ways to improve employee retention.</li>
-            <li>You need assistance with various Human Resources tasks but not on a full time basis. </li>
-            <li>You could use some help managing the office or doing some bookkeeping so that you can concentrate on making money in your business. </li>
-          </ul>
-          <p>These are just some of the things I can help with.  </p>
+          <p>Are there times when your company is extremely busy and other times that are a lot slower?  Have your resisted hiring staff because you are concerned that you may not have work for them in the long term but could really use someone during those busy times?   I may be the person you need, that missing puzzle piece!  I offer part time, temporary, or occasional assistance in Human Resources, recruitment, training and office administration..</p>
           <p><a class="btn btn-default" href="services.html" role="button">Read more &raquo;</a></p>
         </div>
         <div class="col-md-4">
@@ -84,28 +74,30 @@
         </div>
         <!-- InstanceEndEditable -->
       	
-        <div class="col-md-4 contact">
+        <div class="col-md-4">
+       	  <div class="contact">
           <h2>Connect</h2>
-          <p>Business Perspectives is a Calgary based business. For more information or to book services, please contact Janice Richardson.</p>
-          <p>
-            Phone:<br />
-            <span class="field">
-              403-703-9552
-            </span>
-          </p>
-          <p>
-            E-mail:<br />
-            <span class="field">
-              <script type="text/javascript">
-                // Obfuscate
-                var addr = "janice.richardson" + "@" + "businessperspectives.ca";
-                document.write("<a href='mai" + "lto:" + addr + "'>" + addr + "</a>");
-              </script>
-              <noscript>janice.richardson</noscript>
-              <noscript>@</noscript>
-              <noscript>businessperspectives.ca</noscript>
-            </span>
-          </p>
+            <p>Business Perspectives is a Calgary based business. For more information or to book services, please contact Janice Richardson.</p>
+            <p>
+              Phone:<br />
+              <span class="field">
+                403-703-9552
+              </span>
+            </p>
+            <p>
+              E-mail:<br />
+              <span class="field">
+                <script type="text/javascript">
+                  // Obfuscate
+                  var addr = "janice.richardson" + "@" + "businessperspectives.ca";
+                  document.write("<a href='mai" + "lto:" + addr + "'>" + addr + "</a>");
+                </script>
+                <noscript>janice.richardson</noscript>
+                <noscript>@</noscript>
+                <noscript>businessperspectives.ca</noscript>
+              </span>
+            </p>
+          </div>
         </div>
         
       </div>
