Removed shadows, changed 'About Us' to 'About'

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <p><a class="btn btn-default" href="services.html" role="button">Read more &raquo;</a></p>
         </div>
         <div class="col-md-4">
-          <h2>About Us</h2>
+          <h2>About</h2>
           <p>Janice Richardson is the sole proprietor of Business Perspectives.  She has a Bachelor of Business Administration specializing in Human Resources from the University of Regina.  She is also in the process of obtaining her CHRP (Canadian Human Resources Profession) designation.   Janice has a broad spectrum of experience combining Human Resources and business.</p>
           <p><a class="btn btn-default" href="about.html" role="button">Read more &raquo;</a></p>
         </div>
