Added testimonials, modified services content

--- a/services.html
+++ b/services.html
@@ -66,7 +66,7 @@
       <div class="row">
         <div class="col-md-4">
           <h2>Recruitment</h2>
-          <p>Full cycle recruitment or any aspect of it.  I can create the job posting and post the job in various places.  I can recommend some low cost ways to advertise that is still effective. I can screen applications, conduct phone screens to narrow the pile even more, conduct face to face interviews or recommend good interview techniques. I can provide testing (skill or personality), and conduct reference and background checks.  If your company is not currently using an applicant tracking system (a computer system that manages applications) and would like to learn more about them, I can assist with that as well.</p>
+          <p>Are there times that you need to hire a lot of people at once and could use extra help in recruiting?  Or perhaps you are hiring one person but don't want to get bogged down in screening through applications when you could be concentrating on other aspects of your job.  I can provide full cycle recruitment or any aspect of it.  This can range from writing the job postings, advertising, screening applications, conducting phone screens, face-to-face interviews, testing, police background checks and reference checks.  I can recommend low cost ways of advertising that are still effective and recommend good interview techniques.  If your company is not currently using an applicant tracking system (ATS) and would like to learn more about them, I can assist with that as well.</p>
         </div>
         <div class="col-md-4 alt-col">
           <h2>Onboarding</h2>
@@ -74,8 +74,8 @@
         </div>
         <div class="col-md-4">
           <h2>Training</h2>
-          <p>My background in training is conducting employee orientations, teaching about company culture, and software training primarily in Microsoft Office.  However, as long as I can learn the material that needs to be taught, I can certainly provide other types of training.  Sometimes a group format is better but sometimes one of one training is better.  You choose!</p>
-        </div>
+          <p>Would you like someone to teach new employees more about your company and important things you want them to know?  Or perhaps you would like someone to train the employees various software, like Microsoft Office, that your company uses to do their jobs better and be more efficient.   I can help in this area or possible other material that you want to train your employees.  Sometimes a group format is better but sometimes one of one training is better.  You choose!</p>
+      </div>
       </div>
       <div class="row">
         <div class="col-md-4 alt-col">
@@ -108,13 +108,20 @@
       <!-- InstanceEndEditable -->
       
       <div class="row">
-        <div class="col-md-8 alt-col">
-          <h2>Testimonials</h2>
-          <p class="testimonial">Sample content</p>
+        <div class="col-md-12 alt-col">
+          <div class="solid">
+		    <!-- InstanceBeginEditable name="TestimonialContent" -->
+            <p class="testimonial">&quot;Janice Richardson was a breath of fresh air when she worked with us at Home Instead Senior Care (a unique company that works with Seniors) in the Role of HR Manager. Janice is always professional with the special ability to work effectively with a variety of different personalities. Her work was always accurate and she is extremely thorough and precise. She has a common sense that is uncommon in today&rsquo;s workplace.&quot;</p>
+            <p class="testimonial-name">
+              Fred Franchuk<br />
+              Managing Partner<br />
+              DBA Home Instead Senior Care
+            </p>
+            <!-- InstanceEndEditable -->
+          </div>
         </div>
       </div>
       
-      <hr>
       <footer>
         <p>&copy; Business Perspectives 2014</p>
       </footer>
