Moved website files to public_html folder

--- a/public_html/services.html
+++ b/public_html/services.html
@@ -58,8 +58,7 @@
 
     <div class="container">
       <div class="row">
-      	<!-- InstanceBeginEditable name="content2" -->
-        <!-- InstanceEndEditable -->
+      	<!-- InstanceBeginEditable name="content2" -->        <!-- InstanceEndEditable -->
       	
       </div>
 	  <!-- InstanceBeginEditable name="content3" -->
@@ -115,8 +114,7 @@
             <p class="testimonial-name">
               Fred Franchuk<br />
               Managing Partner<br />
-              DBA Home Instead Senior Care
-            </p>
+              DBA Home Instead Senior Care            </p>
             <!-- InstanceEndEditable -->
           </div>
         </div>
