--- a/public_html/services.html
+++ b/public_html/services.html
@@ -19,6 +19,7 @@
 </head>
 
   <body>
+    <img src="img/arrow.png" style="display:none;" />
     <!-- nav bar -->
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
