--- a/public_html/about.html
+++ b/public_html/about.html
@@ -7,16 +7,26 @@
   <link rel="shortcut icon" href="favicon.ico">
   <!-- InstanceBeginEditable name="doctitle" -->
     <title>Business Perspectives - About</title>
-    <!-- InstanceEndEditable -->
+  <!-- InstanceEndEditable -->
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.css" rel="stylesheet">
   <!-- Custom styles for this template -->
   <link href="css/main.css" rel="stylesheet">
   <!-- InstanceBeginEditable name="head" -->
-    <!-- InstanceEndEditable -->
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-54292709-1', 'auto');
+  ga('send', 'pageview');
+
+  </script>
+  <!-- InstanceEndEditable -->
   <!-- InstanceParam name="Contact" type="boolean" value="true" -->
   <!-- InstanceParam name="Testimonials" type="boolean" value="true" -->
-</head>
+        </head>
 
   <body>
     <img src="img/arrow.png" style="display:none;" />
@@ -36,7 +46,7 @@
           </a>
         </div>
         <div class="navbar-collapse collapse navbar-right">
-          <ul class="nav">
+          <ul class="nav" style="margin-bottom: 0">
             <li><a href="index.html">Home</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="about.html">About</a></li>
@@ -60,7 +70,9 @@
       <div class="row">
       	<!-- InstanceBeginEditable name="content2" -->
         <div class="col-md-8 alt-col">
-          <p>Janice Richardson is the sole proprietor of Business Perspectives and she has a Bachelor of Business Administration specializing in Human Resources from the University of Regina.  She is also in the process of obtaining her CHRP (Canadian Human Resources Profession) designation.   Janice has a broad spectrum of experience combining Human Resources and business.  Her strengths are in recruitment, training, organization & planning but also has experience in bookkeeping, payroll, analytics, administrative work, research and writing.  She has worked in many sectors including manufacturing, engineering, oil and gas, healthcare, non-profit, IT/web design, hospitality, and retail.  Janice is always striving to help her clients improve their business processes resulting in more efficient or improved business practices.  Janice is heavily involved in the community volunteering in non-profit organizations, church, sports teams, and schools.  She has a heart for people with various disadvantages and participated in a home building mission trip in Mexico in March 2014.</p>
+          <p style="margin: 20px 0; margin-bottom: 0;"><img src="img/DRG_9852_smaller.jpg" width="210" height="315" style="padding: 0 20px 20px 0" align="left"></p>
+          <p align="left" style="margin-top:0;margin-bottom:0;"><span style="font-size:15px;"><span style="color:#333333;"><span style="font-family:arial;">Hi. I am Janice Richardson and I am the sole proprietor of Business Perspectives. My experience in Human Reources and business  has given me firsthand understanding of the work fluctuation that takes place and the stress that it causes. This inspired me to start up a small business offering companies temporary relief as projects pile up. With a Business Administration degree specialzing in Human Resources and training towards a CHRP designation, I am qualified to handle various tasks in the field. My greatest strength and passion is in the area of recruitment and training. I also have skills and experience in administrative work, onboarding, employee relations, payroll, benefits, planning events, bookkeeping, and research &amp; writing. </span>I am proficent in Microsoft Office programs and have worked on many database and custom-made programs</span></span><span style="font-size:15px;"><span style="color:#333333;">.</span></span></p>
+          <p align="left" style="margin-top:0; margin-bottom: 0;"><span style="font-size:15px;"><span style="color:#333333;">My broad spectrum of experience combines Human Resources and business with working knowledge in sectors including manufacturing, engineering, oil &amp; gas, senior care, non-profit, IT, publishing, hospitality and retail. I love working with people and I strive to help my clients improve their business processes. I am heavily involved in the community  volunteering in a varity of charitable organizations, church, sports teams, and schools. I have also been on a Mission trip to Mexico to help build homes for the less fortunate. </span></span></p>
         </div>
         <!-- InstanceEndEditable -->
       	
@@ -74,7 +86,7 @@
                 403-703-9552
               </span>
             </p>
-            <p>
+            <p style="margin-bottom: 0;">
               E-mail:<br />
               <span class="field">
                 <script type="text/javascript">
@@ -97,13 +109,12 @@
         <div class="col-md-12 alt-col">
           <div class="solid">
 		    <!-- InstanceBeginEditable name="TestimonialContent" -->
-            <p class="testimonial">&quot;I would recommend Janice Richardson for any HR assignment.  Janice is reliable, hardworking, punctual and good with detail.  Janice would be a great asset to any team with her positive, easy going , friendly attitude.&quot;</p>
-            <p class="testimonial-name">
-              Karen Redmond<br />
-              HR and Payroll Administrator<br />
-              Warrior Manufacturing Services Ltd.            </p>
-            <!-- InstanceEndEditable -->
-          </div>
+            <p class="testimonial" style="margin-top: 0; margin-bottom: 0;">&quot;Janice provided loyalty and confidentiality to the projects and work she was assigned.  Her professionalism and patience will be an asset in her future endeavors.&quot;</p>
+            <p style="margin-top: 0;">Diana Festejo, CEO<br />
+              Legacy Place Society </p>
+            <p style="margin-bottom: 0;">&nbsp;</p>
+<p style="margin-top:0;margin-bottom:0;"><span style="font-family:Times New Roman;font-size:15px;"><em><span style="font-family:helvetica; font-size:16px;">&ldquo;Janice was a wonderful asset to my  company. She was willing to take on new challenges and learn the methods to get  things done well. I really appreciated her reliability and firm but quiet  temperament. It was a great privilege to have her on board.&rdquo;</span></em></span></p>
+<span style="font-family:helvetica; font-size:16px;">Kathy Steffan, owner, Creative Endeavors Inc.</span><span style="font-family:Times New Roman; font-size:16px;">&nbsp;</span><!-- InstanceEndEditable -->          </div>
         </div>
       </div>
       
