--- a/public_html/services.html
+++ b/public_html/services.html
@@ -13,6 +13,16 @@
   <!-- Custom styles for this template -->
   <link href="css/main.css" rel="stylesheet">
   <!-- InstanceBeginEditable name="head" -->
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-54292709-1', 'auto');
+  ga('send', 'pageview');
+
+  </script>
     <!-- InstanceEndEditable -->
   <!-- InstanceParam name="Contact" type="boolean" value="false" -->
   <!-- InstanceParam name="Testimonials" type="boolean" value="true" -->
@@ -36,7 +46,7 @@
           </a>
         </div>
         <div class="navbar-collapse collapse navbar-right">
-          <ul class="nav">
+          <ul class="nav" style="margin-bottom: 0">
             <li><a href="index.html">Home</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="about.html">About</a></li>
@@ -63,44 +73,28 @@
 	  <!-- InstanceBeginEditable name="content3" -->
       <div class="row">
         <div class="col-md-4">
-          <h2>Recruitment</h2>
-          <p>Are there times that you need to hire a lot of people at once and could use extra help in recruiting?  Or perhaps you are hiring one person but don't want to get bogged down in screening through applications when you could be concentrating on other aspects of your job.  I can provide full cycle recruitment or any aspect of it.  This can range from writing the job postings, advertising, screening applications, conducting phone screens, face-to-face interviews, testing, police background checks and reference checks.  I can recommend low cost ways of advertising that are still effective and recommend good interview techniques.  If your company is not currently using an applicant tracking system (ATS) and would like to learn more about them, I can assist with that as well.</p>
+          <h2>Recruitment and Selection </h2>
+          <h3>Hiring the Right Person</h3>
+          <p>Do you need help recruiting and hiring new employees? Don't get bogged down screening applications when you could be concentrating on other aspects of your job. Or utilize my skills during those busy times when you need to hire several people in a short time frame.  Providing full cycle recruitment,  my services include sourcing candidates, writing  job postings, advertising, screening applications, conducting phone screens, face-to-face interviews, testing, police background checks and reference checks. </p>
+          <h3>Software</h3>
+          <p style="margin-bottom: 0;">If your company is not currently using an applicant tracking system (ATS), call me to find out how to streamline your recruitment process to manage the flood of applications and the other busy stages.</p>
         </div>
         <div class="col-md-4 alt-col">
-          <h2>Onboarding</h2>
-          <p>Onboarding is more than just getting the required paperwork and desk and computer set up new employee on their first day.  It is teaching them about the culture and expectations of the company.  It is making them feel welcome.  It is making sure there is someone that is guiding them and answering questions in the first few months of work.  It is setting them up for success.</p>
+          <h2>Training and Development</h2>
+          <h3>Orientations / Onboarding</h3>
+          <p>Would you like someone to conduct Orientations to teach new employees everything they need to know about your company during those crucial first few weeks? Or someone to help with the onboarding process?  Onboarding is more than just getting the required paperwork filled out and setting up a desk and computer for a new employee. It is about explaining the culture and expectations of the company, and making them feel welcome. It is about making sure there is someone that is guiding them and answering questions in the first few months of work.   If you don't have a good onboarding plan in place, call me to help set up your new employees for success.</p>
+          <h3>Employee Development</h3>
+          <p style="margin-bottom: 0;">To be successful, employees need ongoing training to improve technical and human skills.  Training may also be needed for succession planning within an organization.  Do you have a plan in place or do you need help with organizing, managing, or assisting in this area?</p>
         </div>
         <div class="col-md-4">
-          <h2>Training</h2>
-          <p>Would you like someone to teach new employees more about your company and important things you want them to know?  Or perhaps you would like someone to train the employees various software, like Microsoft Office, that your company uses to do their jobs better and be more efficient.   I can help in this area or possible other material that you want to train your employees.  Sometimes a group format is better but sometimes one of one training is better.  You choose!</p>
-      </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4 alt-col">
-          <h2>Employee Retention</h2>
-          <p>There is a talent shortage in various industries.  As more and more baby boomers retire, this will just get worse.  Employees will jump to other jobs if they think things will be better there.  The cost of recruiting and training new people is very expensive.  That is why it is important for companies to have strategies to try and retain their current employees.</p>
-        </div>
-        <div class="col-md-4">
-          <h2>Business Processes</h2>
-          <p>Sometimes the business processes your company uses worked at the time they were started but as your company grows or changes, there may be a better way to do things.  Some changes can make the work flow more efficient, therefore reducing costs or allowing you to do more.</p>
-        </div>
-        <div class="col-md-4 alt-col">
-          <h2>Bookkeeping</h2>
-          <p>Sometimes you can get bogged down doing bookkeeping for your business taking away time to actually make money in your business.  If you need help with Accounts Receivable, Accounts Payable, Invoicing, Bank Reconciliations, Bank Deposits, GST, I can help!  </p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <h2>Administrative Work</h2>
-          <p>This could include a full range of things including event planning, mail merges / customer mail outs, create brochures /  manuals, maintain employee files, data entry, reports, purchasing, travel arrangements, customer service, or any other related tasks.</p>
-        </div>
-        <div class="col-md-4 alt-col">
-          <h2>Payroll and Benefits</h2>
-          <p>I can assist managing or implementing a benefit program for you company.  I can also assist doing payroll on a periodic or regular basis.  </p>
-        </div>
-        <div class="col-md-4">
-          <h2>Research</h2>
-          <p>Do you need help finding out more information about something that you may want to do or use but just don't have the time to do it yourself?  I can help!</p>
+          <h2>Administrative / Projects / General <br />
+          </h2>
+          <h3> Planning Events / Projects</h3>
+          <p>I love planning and organizing. Do you have a project or event that you need someone to take on or need extra help with?   Let me tackle some of those extra jobs that are challenging to  get done.</p>
+          <h3>Administrative</h3>
+          <p>Let me look after administrative tasks such as  maintaining employee files, data entry, generating reports, creating manuals, setting up mail merges, handling bulk mailings, scheduling meetings, booking travel, or any  jobs you do not have time to do yourself.</p>
+          <h3>Other</h3>
+          <p style="margin-bottom: 0;">  Human Resources encompasses a lot of areas. I can  assist with employee relations,  performance reviews, payroll, benefits or any other related tasks you may have. My business background also gives me knowledge in roles outside of HR including basic bookkeeping,   purchasing, research,  and writing. If you have a need for a service that I have not listed here, please <a href="about.html">inquire</a> as I may be able to help!</p>
         </div>
       </div>
       <!-- InstanceEndEditable -->
@@ -109,13 +103,12 @@
         <div class="col-md-12 alt-col">
           <div class="solid">
 		    <!-- InstanceBeginEditable name="TestimonialContent" -->
-            <p class="testimonial">&quot;Janice Richardson was a breath of fresh air when she worked with us at Home Instead Senior Care (a unique company that works with Seniors) in the Role of HR Manager. Janice is always professional with the special ability to work effectively with a variety of different personalities. Her work was always accurate and she is extremely thorough and precise. She has a common sense that is uncommon in today&rsquo;s workplace.&quot;</p>
-            <p class="testimonial-name">
-              Fred Franchuk<br />
-              Managing Partner<br />
-              DBA Home Instead Senior Care            </p>
-            <!-- InstanceEndEditable -->
-          </div>
+            <p class="testimonial" style="margin-bottom: 0">&quot;I would recommend Janice Richardson for any HR assignment.  Janice is reliable, hardworking, punctual and good with detail.  Janice would be a great asset to any team with her positive, easy going , friendly attitude.&quot;</p>
+            <p class="testimonial" style="margin-top: 0;"><br>
+              Karen Redmond<br />
+              HR and Payroll Administrator<br />
+              Warrior Manufacturing Services Ltd. </p>
+            <!-- InstanceEndEditable -->          </div>
         </div>
       </div>
       
